Added SOCKS5 Proxy support to dashboard UI and server logic

--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,10 @@
                                 <option value="far">16 (Far) - Do Not Use</option>
                             </select>
                         </div>
+                        <div class="field" style="margin-top:10px;">
+                            <label>SOCKS5 Proxy (Optional)</label>
+                            <input type="text" id="proxy" placeholder="ip:port">
+                        </div>
                         <div class="field"
                             style="margin-top:10px; background:rgba(255,255,255,0.05); padding:8px; border-radius:6px;">
                             <label style="display:flex; align-items:center; gap:8px; cursor:pointer;">
