Added Replit Ghost Browser tool to keep Replit awake 24/7

--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,20 @@
                     </details>
                 </section>
 
+                <!-- NEW: REPLIT KEEP-ALIVE SECTION -->
+                <section class="config-section">
+                    <details>
+                        <summary>Replit Ghost Browser</summary>
+                        <div class="field">
+                            <label>Replit App URL</label>
+                            <input type="text" id="replitUrl" placeholder="https://app-name.username.repl.co">
+                        </div>
+                        <button id="ghostConnectBtn" class="btn primary" style="width:100%; margin-top:10px;">Connect
+                            Ghost Browser</button>
+                        <div id="ghostStatus" style="font-size:12px; margin-top:5px; color:#aaa;">Status: IDLE</div>
+                    </details>
+                </section>
+
                 <div class="divider"></div>
 
                 <section class="bot-builder">
