Added Ultra Lite Mode (Survival Fix) - Disables Entity & World tracking for 0% CPU stability

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,14 @@
                             style="margin-top:10px; background:rgba(255,255,255,0.05); padding:8px; border-radius:6px;">
                             <label style="display:flex; align-items:center; gap:8px; cursor:pointer;">
                                 <input type="checkbox" id="liteMode">
-                                <span><strong>Lite Mode</strong> (No Walking/Inventory) - Use if crashing</span>
+                                <span><strong>Lite Mode</strong> (No Walking/Inventory)</span>
+                            </label>
+                        </div>
+                        <div class="field"
+                            style="margin-top:10px; background:rgba(0,150,255,0.1); padding:8px; border-radius:6px; border:1px solid rgba(0,150,255,0.3);">
+                            <label style="display:flex; align-items:center; gap:8px; cursor:pointer;">
+                                <input type="checkbox" id="ultraLiteMode">
+                                <span><strong>Ultra Lite Mode</strong> (Survival Fix - Ignores Mobs/Chunks)</span>
                             </label>
                         </div>
                     </details>
