Added Bot Health Dashboard - Real-time monitoring of status, latency, and mode per bot

--- a/public/index.html
+++ b/public/index.html
@@ -134,6 +134,11 @@
                 </div>
             </header>
 
+            <!-- Health Monitor Grid -->
+            <section id="healthMonitor" class="health-monitor">
+                <!-- Dynamic Health Cards -->
+            </section>
+
             <div class="chat-container">
                 <div class="chat-window" id="logContainer">
                     <div class="log-entry system"><span class="log-text">Initializing system...</span></div>
