--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
                         </div>
                         <div class="field" style="margin-top:10px;">
                             <label>SOCKS5 Proxy (Optional)</label>
-                            <input type="text" id="proxy" placeholder="ip:port">
+                            <input type="text" id="proxy" placeholder="user:pass@ip:port or ip:port">
                         </div>
                         <div class="field"
                             style="margin-top:10px; background:rgba(255,255,255,0.05); padding:8px; border-radius:6px;">
