Proxy Rotation: Support for comma-separated lists and auto-cycling on disconnect

--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
                                 SOCKS5 Proxy (Optional)
                                 <span id="proxyCheck" style="color:var(--success); display:none;">✔ Saved</span>
                             </label>
-                            <input type="text" id="proxy" placeholder="user:pass@ip:port or ip:port">
+                            <input type="text" id="proxy" placeholder="ip:port, ip:port (Rotates on kick)">
                             <div style="display:flex; justify-content:space-between; margin-top:5px;">
                                 <button id="testProxyBtn" class="btn-small"
                                     style="background:var(--accent); color:white; width:auto; padding:2px 8px;">Test
